Fri Mar 19 17:19:35 2010  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* port.rb, conf.rb: 文字列の転送モードをfairy.confで指定できるよう
	  にした.

Thu Mar 18 22:10:37 2010  Keiju Ishitsuka  <keiju@giant>

	* fairy.rb: [REQ#210]対応(sub)

Thu Mar 18 21:56:08 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* n-group-by.rb: [REQ#210]対応(MGroupBy)

Wed Mar 17 20:10:04 2010  Keiju Ishitsuka  <keiju@%ishitsuka.com>

	* b-barrier.rb, n-barrier.rb: [REQ#210] 対応(barrier完了)
	* log.rb: log_exceptionのメッセージ出力を変えた.

Wed Mar 17 16:55:59 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* port.rb: Export#export_elementsで要素が
	  PORT_KEEP_IDENTITY_CLASS_SETの時の処理にちょっとバグがあった

Fri Mar 12 20:34:08 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* n-barrier.rb: [REQ#210] 対応(barrier)
	* port.rb: PoolQueueがちょっと

Mon Mar  8 15:10:08 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* n-mod-group-by.rb, conf.rb: [REQ#217]対応
	* port.rb: ログ出力追加

Wed Mar  3 17:34:11 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* n-mod-group-by.rb: ExtMergeSortBufferで不要にリファレンスが渡る
	  のをなくした.
	* port.rb: Import#asynchronus_send_with_callbackを追加し
	  asynchronus_send_with_callbackを疑似対応した.

Fri Feb 26 15:01:45 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* n-mod-group-by.rb: ExtMergeSortBufferで終了時に添付ファイルを明
	  示的に消去するようにした
	* fast-tempfile.rb: FastTempFile#close! ですでにクローズされている
	  とき, 例外が発生していた.

Thu Feb 25 20:41:05 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* processor.rb, n-mod-group-by.rb: ExtMergeSortBuffer追加

Tue Feb 23 15:25:57 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* n-mod-group-by.rb: [BUG#212]対応. マージソート用添付ファイルを使
	  用後削除するようにした.
	
Fri Feb 19 19:26:21 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* port.rb: [REQ#210]対応 その3 すべてのqueueに対応

Fri Feb 19 16:10:40 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* port.rb: [REQ#210]対応 その2 ChunkedPoolQueue だけ対応
	* fiber-mon.rb: FiberMon::Monitor 追加


Thu Feb 18 22:28:09 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* processor.rb: Processor#update_statusにバグがあった
