@@ -40,6 +40,7 @@ module Fairy
 
 ##CONF.MASTER_MAX_ACTIVE_PROCESSORS = 4
 #CONF.MASTER_MAX_ACTIVE_PROCESSORS = 2
+CONF.MASTER_MAX_ACTIVE_PROCESSORS = 10
 
 ##CONF.CONTROLLER_INPUT_PROCESSOR_N = 10
 #CONF.CONTROLLER_INPUT_PROCESSOR_N = 2
