@@ -80,6 +80,14 @@ module Fairy
 	      exp, njob = pair
 Log::debug(self, "EXPORT_BY, #{exp.key}")
 	      block.call exp
+
+	      @exports_mutex.synchronize do
+		if @exports[exp.key].first == exp
+		  @exports[exp.key][1..-1].each do |e|
+		    e.output = exp.output
+		  end
+		end
+	      end
 	    end
 	  rescue
 	    Log::fatal_exception
@@ -96,7 +104,7 @@ Log::debug(self, "EXPORT_BY, #{exp.key}")
     def add_exports(key, export, njob)
       @exports_mutex.synchronize do
 	if exports = @exports[key]
-#	  export.output=exports.first.output
+	  export.output = exports.first.output if exports.first.output?
 	  export.no = exports.first.no
 	  exports.push export
 	else
@@ -124,6 +132,7 @@ Log::debug(self, "EXPORT_BY, #{exp.key}")
     def start_watch_all_node_imported
       Thread.start do
 	# すべての njob がそろうまで待つ
+	# 後段が先にスケジュールされてデッドロックするのを避けるため.
 Log::debug(self, "START_WATCH_ALL_NODE_IMPORTED: S")
 	number_of_nodes
 
@@ -136,7 +145,7 @@ Log::debug(self, "START_WATCH_ALL_NODE_IMPORTED: 1.1")
 Log::debug(self, "START_WATCH_ALL_NODE_IMPORTED: 1.2: EXP.NO: #{pair[0].no}")
 	    @exports_queue.push pair
 	  end
-Log::debug(self, "START_WATCH_ALL_NODE_IMPORTED: 1.E")
+Log::debug(self, "START_WATCH_ALL_NODE_IMPORTED: 1.3")
 	end
 
 Log::debug(self, "START_WATCH_ALL_NODE_IMPORTED: 2")
@@ -159,9 +168,9 @@ Log::debug(self, "START_WATCH_ALL_NODE_IMPORTED: 3.1: EXP.NO: #{pair[0].no}")
 Log::debug(self, "START_WATCH_ALL_NODE_IMPORTED: 4")
 #Log::debug(self, "START: setting for EXPOTRS.SIZE")
 	for key, exports in @exports
-	  exports[1..-1].each do |exp|
-	    exp.output=exports.first.output
-	  end
+#	  exports[1..-1].each do |exp|
+#	    exp.output=exports.first.output
+#	  end
 
 #Log::debug(self, "EXPOTRS.SIZE=#{exports.size}")
 	  exports.first.output_no_import = exports.size
