@@ -1,3 +1,7 @@
+Fri Mar 19 23:28:56 2010  Keiju Ishitsuka  <keiju@emperor2.pendome>
+
+	* b-group-by.rb: REQ#203対応
+	
 Fri Mar 19 17:19:35 2010  Keiju Ishitsuka  <keiju@emperor2.pendome>
 
 	* port.rb, conf.rb: 文字列の転送モードをfairy.confで指定できるよう
